# rust-backend-starter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/api/: mod.rs  user_controller.rs
src/application/cli/: mod.rs
src/application/web/: mod.rs
src/business/: mod.rs
src/business/domain/: user.rs
src/business/services/: user_service.rs
src/business/usecase/: create_user.rs
src/core/: error.rs  log.rs  metrics.rs  mod.rs  validation.rs
src/infrastructure/: mod.rs
src/infrastructure/concurrency/: async_rt.rs  channel.rs  mod.rs  thread_pool.rs
src/infrastructure/io/: file_io.rs  mod.rs  net_io.rs  stream.rs
src/infrastructure/memory/: buffer.rs  cache.rs  mod.rs  pool.rs
src/infrastructure/storage/: blob.rs  config.rs  conn_pool.rs  migrate.rs  mod.rs  query.rs
src/infrastructure/storage/orm/: diesel.rs  mod.rs  seaorm.rs  sqlx.rs
