[package]
name = "rust-backend-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }